--- a/assets/component-cart-notification.css
+++ b/assets/component-cart-notification.css
@@ -74,6 +74,7 @@
   flex-grow: 1;
   margin-bottom: 0;
   margin-top: 0;
+  color: white;
 }
 
 .cart-notification__heading .icon-checkmark {
@@ -100,6 +101,7 @@
   display: flex;
   padding-bottom: 3rem;
   padding-top: 2rem;
+  color:white;
 }
 
 .cart-notification-product dl {
