--- a/assets/section-password.css
+++ b/assets/section-password.css
@@ -128,7 +128,6 @@ body {
 @media only screen and (min-width: 750px) {
   .password-button {
     margin-top: 0;
-    margin-left: 2rem;
     width: auto;
     align-self: start;
   }
@@ -182,6 +181,7 @@ body {
   font-size: 1.3rem;
   font-weight: 400;
   line-height: calc(1 + 0.5 / var(--font-body-scale));
+  color:white
 }
 
 .password__footer-login {
@@ -318,4 +318,5 @@ details.modal .modal__toggle-open {
 password-modal {
   justify-self: flex-end;
   grid-column: 3;
+  position: absolute;
 }
